Votes are now counted propertly, quick add for urls

--- a/frontend/assets/partials/videofeed.html
+++ b/frontend/assets/partials/videofeed.html
@@ -1,9 +1,9 @@
 <ol>
 	<li class="media {{item.type}}" ng-repeat="item in mediaitems" ng-click="select($index)" ng-class="{'selected': $index == selected}">
-		<div class="vote" ng-class="{upvoted: get_weight($index) > item.value, downvoted: get_weight($index) < item.value}">
-			<span class="upvote" ng-click="upvoteItem($index)">⬆</span>
-			<span class="rating">{{get_weight($index)}}</span>
-			<span class="downvote" ng-click="downvoteItem($index)">⬇</span>
+		<div class="vote" ng-class="{upvoted: check_voted(item.id), downvoted: false === check_voted(item.id)}">
+			<span class="upvote" ng-click="upvoteItem(this, item)">⬆</span>
+			<span class="rating">{{item.value}}</span>
+			<span class="downvote" ng-click="downvoteItem(this, item)">⬇</span>
 		</div>
 		<div class="image">
 			<a href="{{get_link(item)}}" target="_blank"><img ng-src="{{item.thumbnail}}" alt="{{item.external_id}}"></a>
