--- a/frontend/assets/partials/search.html
+++ b/frontend/assets/partials/search.html
@@ -1,2 +1,2 @@
-<input type="text" id="insert_video" ng-model="customSelected" placeholder="Search for videos or music" typeahead="video for videos in searchMedia($viewValue)" typeahead-template-url="assets/partials/search-result.html" typeahead-min-length="5" typeahead-on-select="addVideo($item)">
+<input type="text" id="insert_video" ng-model="customSelected" placeholder="Search for videos or music" typeahead="result as results.name for results in searchMedia($viewValue)" typeahead-template-url="assets/partials/search-result.html" typeahead-on-select="addVideo($item)" class="{{searchTypeClass()}}">
 <button>Add media</button>
