style in safari and time format working, hides user if nothing playing

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -196,6 +196,7 @@ section {
   background: none;
   color: transparent;
   outline: none;
+  -webkit-appearance: none;
 }
 .search-type-select option {
   color: black;
