--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,47 +1,104 @@
+html, body {
+  margin: 0;
+  padding: 0; }
+
 body {
   background-color: #00898b;
-  font: 1em Helvetica;
-  color: white; }
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  color: white;
+  height: 100%; }
 
 h1, h2, h3 {
-  font: 1.1em Ubuntu;
+  font-size: 1.1em;
   margin: 0; }
 
 ol, header, .media {
   background-color: #00a7aa; }
 
-now-playing {
-  display: block;
-  margin: 5px;
-  padding: 5px; }
-
-p {
-  font-size: 0.8em; }
-
 a {
   color: #fff; }
 
-ol {
+ol.view-feed {
+  overflow-y: scroll;
   margin: 0;
-  padding: 0; }
+  padding: 0.5em 0; }
 
-header {
-  margin: 10px 0;
-  padding: 40px; }
+.now-playing {
+  position: fixed;
+  bottom: 0;
+  padding: 1em;
+  width: 100%;
+  background: #00a7aa; }
 
-search {
-  -webkit-justify-content: center;
+.search-form {
+  background: #00a7aa;
+  padding: 1em;
   justify-content: center;
-  display: -webkit-flex;
-  display: flex; }
-
-search input, search button, search select {
-  border: none;
-  height: 40px;
-  padding: 0 10px;
-  font: 1.1em Ubuntu, Helvetica; }
-search input {
-  min-width: 300px; }
+  display: flex;
+  position: relative; }
+  .search-form input, .search-form button, .search-form select {
+    border: none;
+    height: 40px;
+    padding: 0 10px;
+    font-size: 1.1em; }
+  .search-form input {
+    min-width: 500px; }
+  .search-form .up-down-arrows {
+    font-size: 2em; }
+  .search-form .search-type-select {
+    width: 50px;
+    background: none;
+    color: transparent;
+    outline: none;
+    -webkit-appearance: none; }
+    .search-form .search-type-select option {
+      color: black; }
+  .search-form .results-container {
+    width: 100%;
+    top: 72px;
+    left: 0;
+    z-index: 20;
+    position: absolute; }
+    .search-form .results-container .results-list {
+      margin: 0 auto;
+      width: 550px;
+      max-height: 60vh;
+      padding: 0.5em;
+      overflow-y: scroll;
+      background: #00a7aa;
+      list-style-type: none; }
+      .search-form .results-container .results-list li {
+        padding: 0.5em; }
+        .search-form .results-container .results-list li .video-thumbnail {
+          height: 50px;
+          vertical-align: top;
+          margin-right: 1em; }
+        .search-form .results-container .results-list li .details {
+          display: inline-block;
+          width: 450px; }
+          .search-form .results-container .results-list li .details .name {
+            font-weight: bold; }
+          .search-form .results-container .results-list li .details .name, .search-form .results-container .results-list li .details .author {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            max-width: 400px; }
+        .search-form .results-container .results-list li.selected {
+          background: #00898b; }
+      .search-form .results-container .results-list li:not(:first-child) {
+        margin-top: 0.5em; }
+  .search-form .match-spotify, .search-form .match-youtube, .search-form .match-soundcloud {
+    background-repeat: no-repeat;
+    background-position: right 20px center;
+    background-size: 25px;
+    padding-left: 40px; }
+  .search-form .match-spotify {
+    background-image: url(../img/spotify.png); }
+  .search-form .match-youtube {
+    background-image: url(../img/youtube.png); }
+  .search-form .match-soundcloud {
+    background-image: url(../img/soundcloud.png); }
 
 section {
   margin: 10px 0;
@@ -51,45 +108,38 @@ section {
   display: none !important; }
 
 .media {
-  -webkit-align-items: center;
   align-items: center;
-  overflow: hidden;
-  display: -webkit-flex;
   display: flex;
-  padding: 5px 5px 15px; }
+  padding: 5px 5px; }
   .media:last-child {
     margin: 0; }
-  .media .vote .upvote, .media .vote .downvote {
-    display: none; }
   .media.selected {
-    padding: 5px;
-    margin: 0 0 10px;
     outline: 2px solid white; }
-    .media.selected .vote .upvote, .media.selected .vote .downvote {
-      display: inline; }
-    .media.selected .image {
-      display: block; }
+    .media.selected .image img {
+      max-height: 139px;
+      max-width: 185px; }
     .media.selected .info p {
       display: block; }
-  .media .info p {
-    display: none; }
+    .media.selected .vote-arrow {
+      display: block; }
   .media .image {
-    cursor: pointer;
     margin-right: 20px;
-    display: none;
     text-align: center; }
-  .media .image a {
-    width: 185px;
-    display: block;
-  }
-  .media .image img {
-    max-height: 139px;
-    max-width: 185px;
-    cursor: pointer;
-  }
+    .media .image a {
+      width: 185px;
+      display: block; }
+    .media .image img {
+      max-height: 70px;
+      max-width: 90px;
+      cursor: pointer; }
   .media .info {
-    -webkit-flex: 1;
     flex: 1; }
+    .media .info p {
+      display: none;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-bottom: 0;
+      font-size: 0.8em; }
 
 .rank {
   position: relative;
@@ -101,21 +151,17 @@ section {
     bottom: 0;
     top: 0; }
 
+.vote-arrow {
+  display: none; }
+
 .vote {
   min-width: 50px;
   text-align: center;
   flex-direction: column;
-  -webkit-flex-direction: column;
-  display: -webkit-flex;
   display: flex;
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none; }
   .vote span {
-    -webkit-flex: 1;
     flex: 1; }
 
 .upvote, .downvote {
@@ -129,22 +175,20 @@ section {
 
 @media all and (max-width: 720px) {
   .media .image {
-    display: none !important; }
-  .media .info p {
-    display: none !important; } }
-
+    display: none; } }
 .x-button {
+  display: none; }
+
+.admin .x-button {
   font-weight: bolder;
+  position: absolute;
   cursor: pointer;
   color: red;
+  right: 10px;
+  top: 10px;
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none; }
-  .x-button:hover {
-    cursor: pointer;
+  .admin .x-button:hover {
     color: white; }
 
 *::selection {
@@ -159,55 +203,4 @@ section {
   background-color: #002224;
   /* Firefox */ }
 
-.animate-if.ng-leave, .animate-if.ng-enter {
-   -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-.animate-if.ng-leave, .animate-if.ng-leave-active {
-  opacity: 0;
-}
-.animate-if.ng-enter, .animate-if.ng-leave-active {
-  opacity: 1;
-}
-
-.alert-danger {
-  display: block;
-  padding: 30px 50px;
-  background-color: #063E3E;
-  margin: 10px 0;
-  position: relative;
-}
-.alert-danger:before {
-  content: "!";
-  position: absolute;
-  vertical-align: middle;
-  left: 20px;
-  top: 12px;
-  font-size: 3em;
-  opacity: 0.2;
-}
-
-.dropdown-menu div {
-  display: inline-block;
-}
-
-.search-type-select {
-  width: 50px;
-  background: none;
-  color: transparent;
-  outline: none;
-  -webkit-appearance: none;
-}
-.search-type-select option {
-  color: black;
-}
-.match-spotify, .match-youtube, .match-soundcloud {
-  background-repeat: no-repeat;
-  background-position: right 20px center;
-  background-size: 25px;
-  padding-left: 40px;
-}
-
-.match-spotify { background-image: url(../img/spotify.png); }
-.match-youtube { background-image: url(../img/youtube.png); }
-.match-soundcloud { background-image: url(../img/soundcloud.png); }
+/*# sourceMappingURL=style.css.map */
