--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -134,9 +134,9 @@ ol.view-feed {
         padding-left: 40px;
     }
 
-    .match-spotify { background-image: url(../img/spotify.png); }
-    .match-youtube { background-image: url(../img/youtube.png); }
-    .match-soundcloud { background-image: url(../img/soundcloud.png); }
+    .match-spotify { background-image: url('../img/spotify.png'); }
+    .match-youtube { background-image: url('../img/youtube.png'); }
+    .match-soundcloud { background-image: url('../img/soundcloud.png'); }
 
 
 }
