fixes for playlist support

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -34,6 +34,12 @@ ol.view-feed {
     padding: 0.5em 0;
 }
 
+.tglbutton {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+}
+
 .now-playing {
     position: fixed;
     bottom: 0;
