--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -216,6 +216,12 @@ section {
     &.selected {
         background: $color-active-item-background;
 
+        .image {
+            max-height: 139px;
+            max-width: 185px;
+            min-width: 185px;
+        }
+
         .image img {
             max-height: 139px;
             max-width: 185px;
@@ -233,13 +239,15 @@ section {
 
     .image {
         display: flex;
-        margin-right: 20px;
+        min-width: 90px;
+        max-width: 90px;
 
         @media (max-width: 720px) {
             display: none;
         }
 
         a {
+            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -255,6 +263,7 @@ section {
         flex-direction: column;
         justify-content: center;
         width: 100%;
+        padding-left: 20px;
 
         .title {
             white-space: nowrap;
